tests/fixtures/invalid/pow_bool_list_float.py
# Cannot call pow() with Bool, List[int], Float
x = pow(True, [1, 2, 3], 1.0)
